# cross_asset_alpha_engine

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-jupyter.txt  requirements.txt
mkdocs_export/: index.md  results_analysis.md
mkdocs_export/notebooks/: complete_system_analysis.md
notebooks/: 01_data_sanity_check.ipynb  02_feature_exploration.ipynb  03_regime_detection_demo.ipynb  04_alpha_backtest_demo.ipynb  05_execution_simulation_demo.ipynb  Complete_System_Analysis.ipynb  SPY_QQQM_System_Example.ipynb
scripts/: comprehensive_data_collection.py  export_results.py  generate_experiment_data.py  run_updated_backtest.py
src/cross_asset_alpha_engine/: __init__.py  config.py
src/cross_asset_alpha_engine/backtest/: __init__.py  backtest_engine.py  performance_metrics.py
src/cross_asset_alpha_engine/features/: __init__.py  cross_asset_features.py  daily_features.py  intraday_features.py
src/cross_asset_alpha_engine/models/: __init__.py  alpha_model.py  model_utils.py
src/cross_asset_alpha_engine/regimes/: __init__.py  hmm_regime_model.py  regime_features.py
src/cross_asset_alpha_engine/utils/: __init__.py  logging_utils.py  plotting.py  time_utils.py
tests/: test_basic_imports.py
